--- a/language/resource.language.nl_nl/strings.po
+++ b/language/resource.language.nl_nl/strings.po
@@ -4501,3 +4501,13 @@ msgstr "Spotlight Films"
 msgctxt "#31921"
 msgid "Spotlight TV"
 msgstr ""
+
+#: /shortcuts/searchmenus.DATA.xml
+msgctxt "#31922"
+msgid "Umbrella Movies"
+msgstr "Umbrella films"
+
+#: /shortcuts/searchmenus.DATA.xml
+msgctxt "#31923"
+msgid "Umbrella TV Shows"
+msgstr "Umbrella tv programma's"
