--- a/language/resource.language.en_us/strings.po
+++ b/language/resource.language.en_us/strings.po
@@ -4500,3 +4500,13 @@ msgstr ""
 msgctxt "#31921"
 msgid "Spotlight TV"
 msgstr ""
+
+#: /shortcuts/searchmenus.DATA.xml
+msgctxt "#31922"
+msgid "Umbrella Movies"
+msgstr ""
+
+#: /shortcuts/searchmenus.DATA.xml
+msgctxt "#31923"
+msgid "Umbrella TV Shows"
+msgstr ""
