Uploading Personal AuraMod
All of these updates are from my personal AuraMod setup, this is NOT meant to used for pull requests or anything like that. This is so I can backup my personal auramod copy while I try to fix the skin, just incase I break my own setup. Plus there are fixes in here that haven't been uploaded yet.

--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -1771,7 +1771,7 @@ msgstr ""
 
 #: /1080i/Includes_Widgets.xml
 msgctxt "#31373"
-msgid "See More"
+msgid "See M1re"
 msgstr ""
 
 #: /1080i/EventLog.xml
