--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+v1.1.11
+-Add Spacer for Aura HomeStyle when the user has noSubMenu.
+-Update githubdocs
 v1.1.10
 -Fix Custom1118-EnableRatings missing parenthesis.
 -Fix DialogPVRChannelsOSD.xml ListItemThumb 
